plugins/binding/capi/include/TellusimCMath.h

TS_CAPI TSVector4i* TS_CCALL tsVector4i_abs(TSVector4i *ret, const TSVector4i *v);
TS_CAPI TSVector4i* TS_CCALL tsVector4i_neg(TSVector4i *ret, const TSVector4i *v);
TS_CAPI TSVector4i* TS_CCALL tsVector4i_mul1(TSVector4i *ret, const TSVector4i *v0, int32_t v1);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_mul1(TSVector4u *ret, const TSVector4u *v0, uint32_t v1);
TS_CAPI TSVector4i* TS_CCALL tsVector4i_div1(TSVector4i *ret, const TSVector4i *v0, int32_t v1);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_div1(TSVector4u *ret, const TSVector4u *v0, uint32_t v1);
TS_CAPI TSVector4i* TS_CCALL tsVector4i_add1(TSVector4i *ret, const TSVector4i *v0, int32_t v1);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_add1(TSVector4u *ret, const TSVector4u *v0, uint32_t v1);
TS_CAPI TSVector4i* TS_CCALL tsVector4i_sub1(TSVector4i *ret, const TSVector4i *v0, int32_t v1);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_sub1(TSVector4u *ret, const TSVector4u *v0, uint32_t v1);
TS_CAPI TSVector4i* TS_CCALL tsVector4i_and1(TSVector4i *ret, const TSVector4i *v0, int32_t v1);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_and1(TSVector4u *ret, const TSVector4u *v0, uint32_t v1);
TS_CAPI TSVector4i* TS_CCALL tsVector4i_or1(TSVector4i *ret, const TSVector4i *v0, int32_t v1);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_or1(TSVector4u *ret, const TSVector4u *v0, uint32_t v1);
TS_CAPI TSVector4i* TS_CCALL tsVector4i_xor1(TSVector4i *ret, const TSVector4i *v0, int32_t v1);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_xor1(TSVector4u *ret, const TSVector4u *v0, uint32_t v1);
TS_CAPI TSVector4i* TS_CCALL tsVector4i_shl1(TSVector4i *ret, const TSVector4i *v0, int32_t v1);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_shl1(TSVector4u *ret, const TSVector4u *v0, uint32_t v1);
TS_CAPI TSVector4i* TS_CCALL tsVector4i_shr1(TSVector4i *ret, const TSVector4i *v0, int32_t v1);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_shr1(TSVector4u *ret, const TSVector4u *v0, uint32_t v1);
TS_CAPI TSVector4i* TS_CCALL tsVector4i_mul(TSVector4i *ret, const TSVector4i *v0, const TSVector4i *v1);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_mul(TSVector4u *ret, const TSVector4u *v0, const TSVector4u *v1);
TS_CAPI TSVector4i* TS_CCALL tsVector4i_div(TSVector4i *ret, const TSVector4i *v0, const TSVector4i *v1);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_div(TSVector4u *ret, const TSVector4u *v0, const TSVector4u *v1);
TS_CAPI TSVector4i* TS_CCALL tsVector4i_add(TSVector4i *ret, const TSVector4i *v0, const TSVector4i *v1);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_add(TSVector4u *ret, const TSVector4u *v0, const TSVector4u *v1);
TS_CAPI TSVector4i* TS_CCALL tsVector4i_sub(TSVector4i *ret, const TSVector4i *v0, const TSVector4i *v1);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_sub(TSVector4u *ret, const TSVector4u *v0, const TSVector4u *v1);
TS_CAPI TSVector4i* TS_CCALL tsVector4i_and(TSVector4i *ret, const TSVector4i *v0, const TSVector4i *v1);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_and(TSVector4u *ret, const TSVector4u *v0, const TSVector4u *v1);
TS_CAPI TSVector4i* TS_CCALL tsVector4i_or(TSVector4i *ret, const TSVector4i *v0, const TSVector4i *v1);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_or(TSVector4u *ret, const TSVector4u *v0, const TSVector4u *v1);
TS_CAPI TSVector4i* TS_CCALL tsVector4i_xor(TSVector4i *ret, const TSVector4i *v0, const TSVector4i *v1);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_xor(TSVector4u *ret, const TSVector4u *v0, const TSVector4u *v1);
TS_CAPI TSVector4i* TS_CCALL tsVector4i_min(TSVector4i *ret, const TSVector4i *v0, const TSVector4i *v1);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_min(TSVector4u *ret, const TSVector4u *v0, const TSVector4u *v1);
TS_CAPI TSVector4i* TS_CCALL tsVector4i_max(TSVector4i *ret, const TSVector4i *v0, const TSVector4i *v1);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_max(TSVector4u *ret, const TSVector4u *v0, const TSVector4u *v1);
TS_CAPI TSVector4i* TS_CCALL tsVector4i_clamp(TSVector4i *ret, const TSVector4i *v, const TSVector4i *v0, const TSVector4i *v1);
TS_CAPI TSVector4u* TS_CCALL tsVector4u_clamp(TSVector4u *ret, const TSVector4u *v, const TSVector4u *v0, const TSVector4u *v1);