plugins/binding/swift/include/TellusimObjCMath.h

/*****************************************************************************\
 *
 * Vector2
 *
\*****************************************************************************/

/*
 */
typedef struct TSVector2i {
	union {
		struct {
			int32_t x, y;
		};
		int32_t v[2];
	};
} TSVector2i;
typedef struct TSVector2u {
	union {
		struct {
			uint32_t x, y;
		};
		uint32_t v[2];
	};
} TSVector2u;
/*
 */
typedef TSVector2i Vector2i;
typedef TSVector2u Vector2u;
/*****************************************************************************\
 *
 * Vector3
 *
\*****************************************************************************/

/*
 */
typedef struct TSVector3i {
	union {
		struct {
			int32_t x, y, z;
		};
		struct {
			TSVector2i xy;
			int32_t xy_z;
		};
		int32_t v[3];
	};
} TSVector3i;
typedef struct TSVector3u {
	union {
		struct {
			uint32_t x, y, z;
		};
		struct {
			TSVector2u xy;
			uint32_t xy_z;
		};
		uint32_t v[3];
	};
} TSVector3u;
/*
 */
typedef TSVector3i Vector3i;
typedef TSVector3u Vector3u;
/*
 */
typedef TSVector4i Vector4i;
typedef TSVector4u Vector4u;
typedef TSVector4f Vector4f;
typedef TSVector4d Vector4d;