plugins/binding/csharp/source/TellusimCSMath.cs

		
		public Vector4i(int v) { x = v; y = v; z = v; w = v; }
		public Vector4i(int x, int y, int z, int w) { this.x = x; this.y = y; this.z = z; this.w = w; }
		public Vector4i(in Vector2i v, int z, int w) { x = v.x; y = v.y; this.z = z; this.w = w; }
		public Vector4i(in Vector3i v, int w) { x = v.x; y = v.y; z = v.z; this.w = w; }
		public Vector4i(in Vector4i v) { x = v.x; y = v.y; z = v.z; w = v.w; }
		public Vector4i(in Vector4u v) { x = (int)v.x; y = (int)v.y; z = (int)v.z; w = (int)v.w; }
		public Vector4i(in Vector4f v) { x = (int)v.x; y = (int)v.y; z = (int)v.z; w = (int)v.w; }
		public Vector4i(in Vector4d v) { x = (int)v.x; y = (int)v.y; z = (int)v.z; w = (int)v.w; }
		public Vector4i(in int[] v) { x = v[0]; y = v[1]; z = v[2]; w = v[3]; }
		
		public static Vector4i operator-(in Vector4i v) { Vector4i ret = new Vector4i(); tsVector4i_neg(ref ret, in v); return ret; }
		
		public static Vector4i operator*(in Vector4i v0, int v1) { Vector4i ret = new Vector4i(); tsVector4i_mul1(ref ret, in v0, v1); return ret; }
		public static Vector4i operator/(in Vector4i v0, int v1) { Vector4i ret = new Vector4i(); tsVector4i_div1(ref ret, in v0, v1); return ret; }
		public static Vector4i operator+(in Vector4i v0, int v1) { Vector4i ret = new Vector4i(); tsVector4i_add1(ref ret, in v0, v1); return ret; }
		public static Vector4i operator-(in Vector4i v0, int v1) { Vector4i ret = new Vector4i(); tsVector4i_sub1(ref ret, in v0, v1); return ret; }
		public static Vector4i operator&(in Vector4i v0, int v1) { Vector4i ret = new Vector4i(); tsVector4i_and1(ref ret, in v0, v1); return ret; }
		public static Vector4i operator|(in Vector4i v0, int v1) { Vector4i ret = new Vector4i(); tsVector4i_or1(ref ret, in v0, v1); return ret; }
		public static Vector4i operator^(in Vector4i v0, int v1) { Vector4i ret = new Vector4i(); tsVector4i_xor1(ref ret, in v0, v1); return ret; }
		public static Vector4i operator<<(in Vector4i v0, int v1) { Vector4i ret = new Vector4i(); tsVector4i_shl1(ref ret, in v0, v1); return ret; }
		public static Vector4i operator>>(in Vector4i v0, int v1) { Vector4i ret = new Vector4i(); tsVector4i_shr1(ref ret, in v0, v1); return ret; }
		
		public static Vector4i operator*(in Vector4i v0, in Vector4i v1) { Vector4i ret = new Vector4i(); tsVector4i_mul(ref ret, in v0, in v1); return ret; }
		public static Vector4i operator/(in Vector4i v0, in Vector4i v1) { Vector4i ret = new Vector4i(); tsVector4i_div(ref ret, in v0, in v1); return ret; }
		public static Vector4i operator+(in Vector4i v0, in Vector4i v1) { Vector4i ret = new Vector4i(); tsVector4i_add(ref ret, in v0, in v1); return ret; }
		public static Vector4i operator-(in Vector4i v0, in Vector4i v1) { Vector4i ret = new Vector4i(); tsVector4i_sub(ref ret, in v0, in v1); return ret; }
		public static Vector4i operator&(in Vector4i v0, in Vector4i v1) { Vector4i ret = new Vector4i(); tsVector4i_and(ref ret, in v0, in v1); return ret; }
		public static Vector4i operator|(in Vector4i v0, in Vector4i v1) { Vector4i ret = new Vector4i(); tsVector4i_or(ref ret, in v0, in v1); return ret; }
		public static Vector4i operator^(in Vector4i v0, in Vector4i v1) { Vector4i ret = new Vector4i(); tsVector4i_xor(ref ret, in v0, in v1); return ret; }
		
		public Vector4i abs() { Vector4i ret = new Vector4i(); tsVector4i_abs(ref ret, in this); return ret; }
		
		public static Vector4i min(in Vector4i v0, in Vector4i v1) { Vector4i ret = new Vector4i(); tsVector4i_min(ref ret, in v0, in v1); return ret; }
		public static Vector4i max(in Vector4i v0, in Vector4i v1) { Vector4i ret = new Vector4i(); tsVector4i_max(ref ret, in v0, in v1); return ret; }
		
		public Vector4i clamp(in Vector4i v0, in Vector4i v1) { Vector4i ret = new Vector4i(); tsVector4i_clamp(ref ret, in this, in v0, in v1); return ret; }
		
		public override string ToString() { return System.String.Format("({0} {1} {2} {3})", x, y, z, w); }
		
		[DllImport(Base.Import)] private static extern IntPtr tsVector4i_abs(ref Vector4i ret, in Vector4i v);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4i_neg(ref Vector4i ret, in Vector4i v);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4i_mul1(ref Vector4i ret, in Vector4i v0, int v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4i_div1(ref Vector4i ret, in Vector4i v0, int v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4i_add1(ref Vector4i ret, in Vector4i v0, int v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4i_sub1(ref Vector4i ret, in Vector4i v0, int v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4i_and1(ref Vector4i ret, in Vector4i v0, int v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4i_or1(ref Vector4i ret, in Vector4i v0, int v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4i_xor1(ref Vector4i ret, in Vector4i v0, int v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4i_shl1(ref Vector4i ret, in Vector4i v0, int v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4i_shr1(ref Vector4i ret, in Vector4i v0, int v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4i_mul(ref Vector4i ret, in Vector4i v0, in Vector4i v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4i_div(ref Vector4i ret, in Vector4i v0, in Vector4i v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4i_add(ref Vector4i ret, in Vector4i v0, in Vector4i v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4i_sub(ref Vector4i ret, in Vector4i v0, in Vector4i v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4i_and(ref Vector4i ret, in Vector4i v0, in Vector4i v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4i_or(ref Vector4i ret, in Vector4i v0, in Vector4i v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4i_xor(ref Vector4i ret, in Vector4i v0, in Vector4i v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4i_min(ref Vector4i ret, in Vector4i v0, in Vector4i v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4i_max(ref Vector4i ret, in Vector4i v0, in Vector4i v1);
		[DllImport(Base.Import)] private static extern IntPtr tsVector4i_clamp(ref Vector4i ret, in Vector4i v, in Vector4i v0, in Vector4i v1);
		
		public static readonly Vector4i zero = new Vector4i(0);
		public static readonly Vector4i oneX = new Vector4i(1, 0, 0, 0);
		public static readonly Vector4i oneY = new Vector4i(0, 1, 0, 0);
		public static readonly Vector4i oneZ = new Vector4i(0, 0, 1, 0);
		public static readonly Vector4i oneW = new Vector4i(0, 0, 0, 1);
		public static readonly Vector4i one = new Vector4i(1);
		
		public int x, y, z, w;
	}
	
	/*
	 */
	[StructLayout(LayoutKind.Sequential, Pack=16)]
	public struct Vector4u {
		
		public Vector4u(uint v) { x = v; y = v; z = v; w = v; }
		public Vector4u(uint x, uint y, uint z, uint w) { this.x = x; this.y = y; this.z = z; this.w = w; }
		public Vector4u(in Vector2u v, uint z, uint w) { x = v.x; y = v.y; this.z = z; this.w = w; }
		public Vector4u(in Vector3u v, uint w) { x = v.x; y = v.y; z = v.z; this.w = w; }
		public Vector4u(in Vector4u v) { x = v.x; y = v.y; z = v.z; w = v.w; }
		public Vector4u(in Vector4i v) { x = (uint)v.x; y = (uint)v.y; z = (uint)v.z; w = (uint)v.w; }
		public Vector4u(in Vector4f v) { x = (uint)v.x; y = (uint)v.y; z = (uint)v.z; w = (uint)v.w; }
		public Vector4u(in Vector4d v) { x = (uint)v.x; y = (uint)v.y; z = (uint)v.z; w = (uint)v.w; }
		public Vector4u(in uint[] v) { x = v[0]; y = v[1]; z = v[2]; w = v[3]; }
		
		public static Vector4u operator*(in Vector4u v0, uint v1) { Vector4u ret = new Vector4u(); tsVector4u_mul1(ref ret, in v0, v1); return ret; }
		public static Vector4u operator/(in Vector4u v0, uint v1) { Vector4u ret = new Vector4u(); tsVector4u_div1(ref ret, in v0, v1); return ret; }
		public static Vector4u operator+(in Vector4u v0, uint v1) { Vector4u ret = new Vector4u(); tsVector4u_add1(ref ret, in v0, v1); return ret; }
		public static Vector4u operator-(in Vector4u v0, uint v1) { Vector4u ret = new Vector4u(); tsVector4u_sub1(ref ret, in v0, v1); return ret; }
		public static Vector4u operator&(in Vector4u v0, uint v1) { Vector4u ret = new Vector4u(); tsVector4u_and1(ref ret, in v0, v1); return ret; }
		public static Vector4u operator|(in Vector4u v0, uint v1) { Vector4u ret = new Vector4u(); tsVector4u_or1(ref ret, in v0, v1); return ret; }
		public static Vector4u operator^(in Vector4u v0, uint v1) { Vector4u ret = new Vector4u(); tsVector4u_xor1(ref ret, in v0, v1); return ret; }
		public static Vector4u operator<<(in Vector4u v0, int v1) { Vector4u ret = new Vector4u(); tsVector4u_shl1(ref ret, in v0, (uint)v1); return ret; }
		public static Vector4u operator>>(in Vector4u v0, int v1) { Vector4u ret = new Vector4u(); tsVector4u_shr1(ref ret, in v0, (uint)v1); return ret; }
		
		public static Vector4u operator*(in Vector4u v0, in Vector4u v1) { Vector4u ret = new Vector4u(); tsVector4u_mul(ref ret, in v0, in v1); return ret; }
		public static Vector4u operator/(in Vector4u v0, in Vector4u v1) { Vector4u ret = new Vector4u(); tsVector4u_div(ref ret, in v0, in v1); return ret; }
		public static Vector4u operator+(in Vector4u v0, in Vector4u v1) { Vector4u ret = new Vector4u(); tsVector4u_add(ref ret, in v0, in v1); return ret; }
		public static Vector4u operator-(in Vector4u v0, in Vector4u v1) { Vector4u ret = new Vector4u(); tsVector4u_sub(ref ret, in v0, in v1); return ret; }
		public static Vector4u operator&(in Vector4u v0, in Vector4u v1) { Vector4u ret = new Vector4u(); tsVector4u_and(ref ret, in v0, in v1); return ret; }
		public static Vector4u operator|(in Vector4u v0, in Vector4u v1) { Vector4u ret = new Vector4u(); tsVector4u_or(ref ret, in v0, in v1); return ret; }
		public static Vector4u operator^(in Vector4u v0, in Vector4u v1) { Vector4u ret = new Vector4u(); tsVector4u_xor(ref ret, in v0, in v1); return ret; }
		
		public static Vector4u min(in Vector4u v0, in Vector4u v1) { Vector4u ret = new Vector4u(); tsVector4u_min(ref ret, in v0, in v1); return ret; }
		public static Vector4u max(in Vector4u v0, in Vector4u v1) { Vector4u ret = new Vector4u(); tsVector4u_max(ref ret, in v0, in v1); return ret; }
		
		public Vector4u clamp(in Vector4u v0, in Vector4u v1) { Vector4u ret = new Vector4u(); tsVector4u_clamp(ref ret, in this, in v0, in v1); return ret; }
		
		public override string ToString() { return System.String.Format("({0} {1} {2} {3})", x, y, z, w); }
